# disk_scrub

./: Makefile.am  README.md
src/: config.h  disk_scrub.c  genrand.c  scrub.c  scrub.h
说明/: Readme.md
