bin_PROGRAMS = disk_scrub

disk_scrub_SOURCES = \
	src/aes.c \
	src/aes.h \
	src/filldentry.c \
	src/filldentry.h \
	src/fillfile.c \
	src/fillfile.h \
	src/genrand.c \
	src/genrand.h \
	src/getsize.c \
	src/getsize.h \
	src/hwrand.c \
	src/hwrand.h \
	src/pattern.c \
	src/pattern.h \
	src/progress.c \
	src/progress.h \
	src/scrub.c \
	src/scrub.h \
	src/disk_scrub.c \
	src/sig.c \
	src/sig.h \
	src/util.c \
	src/util.h

disk_scrub_LDADD = $(LIBPTHREAD) $(LIBPROP)
